fixed the rendering problem cause of why the image looked blurry what did i even expect with it being 32px

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -196,6 +196,7 @@ h1::after {
     height: 70%;
     object-fit: cover;
     border-radius: 50%;
+    image-rendering: pixelated;
 }
 
 .piece {
@@ -223,6 +224,7 @@ h1::after {
     height: 100%;
     object-fit: contain;
     pointer-events: none;
+    image-rendering: pixelated;
 }
 
 
